# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: chip8.hpp
tests/: CMakeLists.txt
utils/: logger.hpp
